--- a/GAM_RDS/BIC_model.Rmd
+++ b/GAM_RDS/BIC_model.Rmd
@@ -24,8 +24,8 @@ library(splines)
 
 ```{r}
 #resp_data <- readRDS("../Datasets/thoracotomy_waveforms/comb_ventilation_data.RDS")
-dat_frame <- data.frame(matrix(ncol = 6, nrow = 0))
-x <- c("Model", "BIC_GAM", "BIC_Spline", "BIC_lm", "BIC_poly_12", "BIC_ploy_23")
+dat_frame <- data.frame(matrix(ncol = 5, nrow = 0))
+x <- c("Model", "Model_BIC", "LM_BIC", "Poly1_BIC", "Poly2_BIC")
 colnames(dat_frame) <- x
 qwerty <- 1
 df <- list.files(pattern = ".rds")
@@ -41,19 +41,19 @@ for (name in df){
   if(!is.null(gam_obj$model$cvp)  & !is.null(gam_obj$model$qrs_rel_index) & !is.null(gam_obj$model$insp_rel_index) & !is.null(gam_obj$model$time_s)) {
     
     #mae_model <- mean(abs(gam_obj$residuals))
-    spline <- lm(gam_obj$model$cvp ~ bs(gam_obj$model$qrs_rel_index * gam_obj$model$insp_rel_index + gam_obj$model$time_s))
+   # spline <- lm(gam_obj$model$cvp ~ bs(gam_obj$model$qrs_rel_index * gam_obj$model$insp_rel_index + gam_obj$model$time_s))
     lm1 <- lm(gam_obj$model$cvp ~ gam_obj$model$qrs_rel_index * gam_obj$model$insp_rel_index + gam_obj$model$time_s)
     nlm1 <- lm(gam_obj$model$cvp~ poly(gam_obj$model$qrs_rel_index, 12) + poly(gam_obj$model$insp_rel_index, 8) + poly(gam_obj$model$time_s, 3))
     nlm2 <- lm(gam_obj$model$cvp ~ poly(gam_obj$model$qrs_rel_index, 23) + poly(gam_obj$model$insp_rel_index, 23) + poly(gam_obj$model$time_s, 23))
-    bic_model <- BIC(gam_obj, spline, lm1, nlm1, nlm2)
+    bic_model <- BIC(gam_obj, lm1, nlm1, nlm2)
   
     dat_frame[qwerty, 1] <- name
     #dat_frame[qwerty, 2] <- mae_model #MAE_model
     dat_frame[qwerty, 2] <- bic_model[1, 2] #GAM_model
-    dat_frame[qwerty, 3] <- bic_model[2, 2] #Spline_model
-    dat_frame[qwerty, 4] <- bic_model[3, 2] #Lm_model
-    dat_frame[qwerty, 5] <- bic_model[4, 2] #poly_12
-    dat_frame[qwerty, 6] <- bic_model[5, 2] #poly_23
+    #dat_frame[qwerty, 3] <- bic_model[2, 2] #Spline_model
+    dat_frame[qwerty, 3] <- bic_model[2, 2] #Lm_model
+    dat_frame[qwerty, 4] <- bic_model[3, 2] #poly_12
+    dat_frame[qwerty, 5] <- bic_model[4, 2] #poly_23
     qwerty <- qwerty + 1
   }
 
@@ -81,8 +81,8 @@ bic_model[5,2] # GAM: [1,2] = -9353. LM1: [2,2] = 7907
 
 ```{r}
 #resp_data <- readRDS("../Datasets/thoracotomy_waveforms/comb_ventilation_data.RDS")
-dat_frame <- data.frame(matrix(ncol = 6, nrow = 0))
-x <- c("Model", "MAE_GAM", "MAE_Spline", "MAE_lm", "MAE_poly_12", "MAE_ploy_23")
+dat_frame <- data.frame(matrix(ncol = 5, nrow = 0))
+x <- c("Model", "Model_MAE", "LM_MAE", "Poly1_MAE", "Poly2_MAE")
 colnames(dat_frame) <- x
 qwerty <- 1
 df <- list.files(pattern = ".rds")
@@ -98,25 +98,25 @@ for (name in df){
   if(!is.null(gam_obj$model$cvp)  & !is.null(gam_obj$model$qrs_rel_index) & !is.null(gam_obj$model$insp_rel_index) & !is.null(gam_obj$model$time_s)) {
     
     
-    spline <- lm(gam_obj$model$cvp ~ bs(gam_obj$model$qrs_rel_index * gam_obj$model$insp_rel_index + gam_obj$model$time_s))
+   # spline <- lm(gam_obj$model$cvp ~ bs(gam_obj$model$qrs_rel_index * gam_obj$model$insp_rel_index + gam_obj$model$time_s))
     lm1 <- lm(gam_obj$model$cvp ~ gam_obj$model$qrs_rel_index * gam_obj$model$insp_rel_index + gam_obj$model$time_s)
     nlm1 <- lm(gam_obj$model$cvp~ poly(gam_obj$model$qrs_rel_index, 12) + poly(gam_obj$model$insp_rel_index, 8) + poly(gam_obj$model$time_s, 3))
     nlm2 <- lm(gam_obj$model$cvp ~ poly(gam_obj$model$qrs_rel_index, 23) + poly(gam_obj$model$insp_rel_index, 23) + poly(gam_obj$model$time_s, 23))
-    bic_model <- BIC(gam_obj, spline, lm1, nlm1, nlm2)
+  #  bic_model <- BIC(gam_obj, lm1, nlm1, nlm2)
   
     
     mae_model <- mean(abs(gam_obj$residuals))
-    mae_spline <- mean(abs(spline$residuals))
+    #mae_spline <- mean(abs(spline$residuals))
     mae_lm <- mean(abs(lm1$residuals))
     mae_poly_12 <- mean(abs(nlm1$residuals))
     mae_poly_23 <- mean(abs(nlm2$residuals))
     
     dat_frame[qwerty, 1] <- name
     dat_frame[qwerty, 2] <- mae_model #MAE_model
-    dat_frame[qwerty, 3] <- mae_spline #MAE_spline
-    dat_frame[qwerty, 4] <- mae_lm #MAE lm
-    dat_frame[qwerty, 5] <- mae_poly_12 #poly_12_model
-    dat_frame[qwerty, 6] <- mae_poly_23 #poly_12
+    #dat_frame[qwerty, 3] <- mae_spline #MAE_spline
+    dat_frame[qwerty, 3] <- mae_lm #MAE lm
+    dat_frame[qwerty, 4] <- mae_poly_12 #poly_12_model
+    dat_frame[qwerty, 5] <- mae_poly_23 #poly_12
     qwerty <- qwerty + 1
   }
 
