--- a/R/Open_chest_gam_v5.Rmd
+++ b/R/Open_chest_gam_v5.Rmd
@@ -15,11 +15,12 @@ library(hms)
 library(shiny)
 library(shinythemes)
 library(shinyTime)
+library(shinyBS)
 library(data.table)
 library(readr)
 library(dygraphs)
 library(dplyr)
-library(ggpubr)
+#library(ggpubr)
 library(gridExtra)
 ```
 
@@ -28,13 +29,13 @@ Functions:
 ```{r}
 pt_range <- c(2, 3, 4) #seq(1,61) # insert the number of the patient you want to visualize
 
-load_patient <- function(patient_number){
-    # a function that loads GAMs in RDS file format using a specific nomenclature
-    ptopen <- readRDS(paste0("../GAM_RDS/",patient_number, "OPEN.rds"))
-    ptclosed <- readRDS(paste0("../GAM_RDS/",patient_number, "CLOSED.rds"))
-    pt <- list("ptopen" = ptopen, "ptclosed" = ptclosed)
-    return(pt)
-}
+# load_patient <- function(patient_number){
+#     # a function that loads GAMs in RDS file format using a specific nomenclature
+#     ptopen <- readRDS(paste0("../GAM_RDS/",patient_number, "OPEN.rds"))
+#     ptclosed <- readRDS(paste0("../GAM_RDS/",patient_number, "CLOSED.rds"))
+#     pt <- list("ptopen" = ptopen, "ptclosed" = ptclosed)
+#     return(pt)
+# }
 
 
 gen_predictions <- function(cvp_gam) {
@@ -210,35 +211,35 @@ create_dygraphs <- function(closed, open){
 Testing area:
 
 ```{r}
-testpt <- "pt02"
-center_open <- 25
-center_closed <- 25
-
-patient_path_open <- paste("../GAM_RDS/", testpt, "OPEN.rds",sep="")
-pt_data_open <- readRDS(patient_path_open, refhook = NULL)
-  
-patient_path_closed <- paste("../GAM_RDS/", testpt, "CLOSED.rds",sep="")
-pt_data_closed <- readRDS(patient_path_closed, refhook = NULL)
-
-
-a <- create_contour_patient(pt_data_open, pt_data_closed)
-
-
-# For snap plots
-preds <- create_patient_preds(ptopen = pt_data_open, ptclosed = pt_data_closed)
-snapplot <- create_viz(pred_both = preds,
-                       patient_number = toString(strtoi(str_sub(testpt,-2))))
-
-# For stacked INSP/QRS plots
-stackedplotINSP <- ggplot() +
-  geom_line(data=give_it_center(gratia::evaluate_smooth(pt_data_open,'s(insp_rel_index)'),center_open),
-            aes(insp_rel_index,est, colour="open")) +
-  geom_line(data=give_it_center(gratia::evaluate_smooth(pt_data_closed,'s(insp_rel_index)'),center_closed),
-            aes(insp_rel_index,est, colour="closed")) +
-  scale_color_manual(values = c('open' = 'darkblue',
-                                'closed' = 'red')) +
-  theme(legend.position = "none") +
-  ggtitle("INSP")
+# testpt <- "pt02"
+# center_open <- 25
+# center_closed <- 25
+# 
+# patient_path_open <- paste("../GAM_RDS/", testpt, "OPEN.rds",sep="")
+# pt_data_open <- readRDS(patient_path_open, refhook = NULL)
+#   
+# patient_path_closed <- paste("../GAM_RDS/", testpt, "CLOSED.rds",sep="")
+# pt_data_closed <- readRDS(patient_path_closed, refhook = NULL)
+# 
+# 
+# a <- create_contour_patient(pt_data_open, pt_data_closed)
+# 
+# 
+# # For snap plots
+# preds <- create_patient_preds(ptopen = pt_data_open, ptclosed = pt_data_closed)
+# snapplot <- create_viz(pred_both = preds,
+#                        patient_number = toString(strtoi(str_sub(testpt,-2))))
+# 
+# # For stacked INSP/QRS plots
+# stackedplotINSP <- ggplot() +
+#   geom_line(data=give_it_center(gratia::evaluate_smooth(pt_data_open,'s(insp_rel_index)'),center_open),
+#             aes(insp_rel_index,est, colour="open")) +
+#   geom_line(data=give_it_center(gratia::evaluate_smooth(pt_data_closed,'s(insp_rel_index)'),center_closed),
+#             aes(insp_rel_index,est, colour="closed")) +
+#   scale_color_manual(values = c('open' = 'darkblue',
+#                                 'closed' = 'red')) +
+#   theme(legend.position = "none") +
+#   ggtitle("INSP")
 
 ```
 
@@ -264,18 +265,20 @@ ui <- fluidPage(theme = shinytheme("sandstone"),
     tabPanel("Main page",
         
         # Parameters
-        sidebarPanel(h3("Inputs"),
-                     selectInput("patient", label = "Select patient", 
+        sidebarPanel(selectInput("patient", label = "Select patient", 
                                  choices = list(patient_list = patient_list),  selected = "pt02"),
                      sliderInput("center_closed", label = "Index placement of largest respiration effect during closed chest",
                                  min = 1, max = 100, value = 50),
                      sliderInput("center_open", label = "Index placement of largest respiration effect during open chest",
                                  min = 1, max = 100, value = 50),
+                     h3("Model details"),
                      tableOutput('table'),
-                    # tags$style(type="text/css", "#table tr td:first-child {font-weight:bold;}")),
-                    tags$style(type="text/css", "#table tr:first-child, td:first-child { font-weight: bold;}"),
-                    tags$style(type="text/css", "#table tr:nth-child(1), tr:nth-child(5), tr:nth-child(10)  { border-bottom: solid 2px black;}"),
-                    htmlOutput("text3")),
+                     #tags$style(type="text/css", "#table tr td:first-child {font-weight:bold;}"),
+                     tags$style(type="text/css", "#table tr:first-child, td:first-child { font-weight: bold;}"),
+                     tags$style(type="text/css",
+                                "#table tr:nth-child(1), tr:nth-child(5), tr:nth-child(10) {border-bottom: solid 2px black;}"),
+                     tags$style(type="text/css", "#table tr:hover {background-color: #f8fff5;"),
+                     htmlOutput("modeltext")),
 
 
                   
@@ -350,59 +353,82 @@ server <- function(input, output) {
   dy_graphs <- reactive({create_dygraphs(pt_data_closed(), pt_data_open())})
   
   output$dygraph1 <- renderUI({htmltools::browsable(htmltools::tagList(dy_graphs()))})
-  # Dygraph render ends her
+  # Dygraph render ends here
   
   output$text2 <- renderText({
-                HTML("On this page you can see observed values, the models predicted values, and residuals.")
-            }) # Render Text for second page
+    HTML("On this page you can see observed values, the models predicted values, and residuals.")
+    }) # Render Text for second page
   
-  ## Dette er TABLE!!
-  data_time_open  <- reactive({ gratia::evaluate_smooth(pt_data_open(),   's(time_s)')})
-  data_time_closed <- reactive({ gratia::evaluate_smooth(pt_data_closed(), 's(time_s)')})
-  
-  
-  model_table <- reactive({subset(table_values, Model %in% c(paste0(input$patient, "OPEN.rds", sep=""),
-                                                             paste0(input$patient, "CLOSED.rds", sep="")),
-                                  select = c("Model")) })
-  
-  cv_mae_table <- reactive({subset(table_values, Model %in% c(paste0(input$patient, "OPEN.rds", sep=""),
-                                                             paste0(input$patient, "CLOSED.rds", sep="")),
-                                  select = c("CV_MAE")) })
-  
-  mae_table <- reactive({subset(mae_values, Model %in% c(paste0(input$patient, "OPEN.rds", sep=""),
-                                                             paste0(input$patient, "CLOSED.rds", sep="")),
-                                  select = c("Actual Model MAE")) })
-  
- mae_table2 <- reactive({subset(mae_values, Model %in% c(paste0(input$patient, "OPEN.rds", sep=""),
-                                                             paste0(input$patient, "CLOSED.rds", sep="")),
-                                  select = c("LM MAE","Poly1 MAE","Poly2 MAE")) })
-  
-  bic_table <- reactive({subset(bic_values, Model %in% c(paste0(input$patient, "OPEN.rds", sep=""),
-                                                             paste0(input$patient, "CLOSED.rds", sep="")),
-                                  select = c("Actual Model BIC","LM BIC","Poly1 BIC","Poly2 BIC")) })
+  # This is a TABLE!
+  data_time_open  <- reactive({gratia::evaluate_smooth(pt_data_open(), 's(time_s)')})
+  data_time_closed <- reactive({gratia::evaluate_smooth(pt_data_closed(), 's(time_s)')})
   
   
-  intercept <- reactive({c(pt_data_open()[["coefficients"]][1],pt_data_closed()[["coefficients"]][1] )  })
+  model_table <- reactive({rename(subset(table_values,
+                                         Model %in% c(paste0(input$patient, "OPEN.rds"),
+                                                      paste0(input$patient, "CLOSED.rds")),
+                                         select = c("Model")),
+                                  `Model file` = Model)})
   
-  start_time <- reactive({ c(min(data_time_closed()$time_s), min(data_time_open()$time_s)) })
-  end_time <- reactive({ c(max(data_time_closed()$time_s), max(data_time_open()$time_s)) })
-  diff_time <- reactive({ c(max(data_time_closed()$time_s) - min(data_time_closed()$time_s), 
-                            max(data_time_open()$time_s) - min(data_time_open()$time_s)) })
+  cv_mae_table <- reactive({round(rename(subset(table_values,
+                                                Model %in% c(paste0(input$patient, "OPEN.rds"),
+                                                             paste0(input$patient, "CLOSED.rds")),
+                                                select = c("CV_MAE")),
+                                         `Cross validation MAE` = CV_MAE),
+                                  3)})
   
-  #final_table <- reactive({cbind(first_table(), start_time(), end_time(), diff_time())})
+  mae_table <- reactive({round(rename(subset(mae_values,
+                                             Model %in% c(paste0(input$patient, "OPEN.rds"),
+                                                          paste0(input$patient, "CLOSED.rds")),
+                                             select = c("Actual Model MAE")),
+                                      `Model MAE` = `Actual Model MAE`),
+                               3)})
+  
+  mae_table2 <- reactive({round(subset(mae_values,
+                                       Model %in% c(paste0(input$patient, "OPEN.rds"),
+                                                    paste0(input$patient, "CLOSED.rds")),
+                                       select = c("LM MAE","Poly1 MAE","Poly2 MAE")),
+                                3)})
+  
+  bic_table <- reactive({round(rename(subset(bic_values,
+                                             Model %in% c(paste0(input$patient, "OPEN.rds"),
+                                                          paste0(input$patient, "CLOSED.rds")),
+                                             select = c("Actual Model BIC","LM BIC","Poly1 BIC","Poly2 BIC")),
+                                      `Model BIC`=`Actual Model BIC`))})
   
   
-  output$table <- renderTable({t(cbind(model_table(), start_time(), end_time(), diff_time(), intercept(), mae_table(), cv_mae_table(), mae_table2(), bic_table()))}, rownames=TRUE, colnames=FALSE)
+  intercept <- reactive({round(c(pt_data_open()[["coefficients"]][1],
+                                 pt_data_closed()[["coefficients"]][1]),3)})
   
-  output$text3 <- renderUI({
-                str1 <- "LM: linear Regression Model "
-                str11 <- "CVP = &beta;&#95;0 (qrs_rel_index &times; insp_rel_index) + &beta;&#95;1 qrs_rel_index + &beta;&#95;2 insp_rel_index + &beta;&#95;3 time + &epsilon;."
+  start_time <- reactive({formatC(round(c(min(data_time_closed()$time_s), min(data_time_open()$time_s)), 1), 1, format="f")})
+  end_time <- reactive({formatC(round(c(max(data_time_closed()$time_s), max(data_time_open()$time_s)), 1), 1, format="f")})
+  diff_time <- reactive({formatC(round(c(max(data_time_closed()$time_s) - min(data_time_closed()$time_s),
+                                         max(data_time_open()$time_s) - min(data_time_open()$time_s)), 1), 1, format="f")})
+  
+  output$table <- renderTable({t(cbind(model_table(),
+                                       `Model intercept` = intercept(),
+                                       `Model data start time` = start_time(),
+                                       `Model data end time` = end_time(),
+                                       `Model data time length` = diff_time(),
+                                       mae_table(),
+                                       cv_mae_table(),
+                                       mae_table2(),
+                                       bic_table()))}, 
+                              rownames=TRUE, 
+                              colnames=FALSE)
+  
+  output$modeltext <- renderUI({
+                str1 <- "LM: Linear Regression Model"
+                str11 <- "CVP = &beta;<sub>0</sub> (qrs_rel_index &times; insp_rel_index) + &beta;<sub>1</sub> qrs_rel_index + 
+                  &beta;<sub>2</sub> insp_rel_index + &beta;<sub>3</sub> time + &epsilon;."
                 str111 <- ""
                 str2 <- "Poly1: Polynomial Regression Model 1"
-                str22 <- "CVP = &beta;&#95;0 qrs_rel_index^12 + &beta;&#95;1 insp_rel_index^8 + &beta;&#95;2 time^3 + &epsilon;."
+                str22 <- "CVP = &beta;<sub>0</sub> qrs_rel_index<sup>12</sup> + &beta;<sub>1</sub> insp_rel_index<sup>8</sup> + 
+                  &beta;<sub>2</sub> time<sup>3</sup> + &epsilon;."
                 str222 <- ""
                 str3 <- "Poly 2: Polynomial Regression Model 2"
-                str33 <- "CVP = &beta;&#95;0 qrs_rel_index^23 + &beta;&#95;1 insp_rel_index^23 + &beta;&#95;2 time^23 + &epsilon;."
+                str33 <- "CVP = &beta;<sub>0</sub> qrs_rel_index<sup>23</sup> + &beta;<sub>1</sub> insp_rel_index<sup>23</sup> + 
+                  &beta;<sub>2</sub> time<sup>23</sup> + &epsilon;."
                 str333 <- ""
                 HTML(paste(str1, str11, str111, str2, str22, str222, str3, str33, str333, sep = '<br/>') )
             })   
