--- a/R/Open_chest_gam_v5.Rmd
+++ b/R/Open_chest_gam_v5.Rmd
@@ -15,7 +15,7 @@ library(hms)
 library(shiny)
 library(shinythemes)
 library(shinyTime)
-library(shinyBS)
+#library(shinyBS)
 library(data.table)
 library(readr)
 library(dygraphs)
@@ -155,7 +155,8 @@ create_contour_viz <- function(data_set,
                                lab.y = "Relative respiration index",
                                lab.x = "Relative QRS index",
                                lab.legend = "Estimated effect\non CVP",
-                               wrap = TRUE){
+                               wrap = TRUE,
+                               left_margin = 5){
   viz <- ggplot(data_set, aes(qrs_rel_index, insp_rel_index, z = est)) +
     geom_raster(aes(fill = est)) +
     geom_contour(colour = "black") +
@@ -164,7 +165,7 @@ create_contour_viz <- function(data_set,
            y = lab.y,
            x = lab.x,
            fill = lab.legend) +
-    theme(axis.title.y = element_text(margin = margin(t = 0, r = 5, b = 0, l = 0)))
+    theme(axis.title.y = element_text(margin = margin(t = 0, r = left_margin, b = 0, l = 0)))
   if(wrap){
     viz <- viz + facet_wrap(~ indicator)}
   return(viz)
@@ -183,6 +184,29 @@ create_viz <- function(pred_both, patient_number = NULL){
       facet_wrap(~ indicator) +
       theme(axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0)))
     return(viz)
+}
+
+
+diff_snap_plot <- function(preds_data, lab.legend = "Relative        \nrespiration index"){
+  preds_data <- preds_data[order(preds_data$indicator, preds_data$insp_rel_index, preds_data$qrs_rel_index),]
+  closed_and <- preds_data[1:5000,]
+  open_and <- preds_data[5001:10000,]
+  
+  data_to_plot <- tibble(insp_rel_index = (closed_and$insp_rel_index + open_and$insp_rel_index)/2,
+                         qrs_rel_index = closed_and$qrs_rel_index,
+                         CVP = closed_and$CVP - open_and$CVP,
+                         indicator = rep("Difference", 5000))
+
+  viz <- ggplot(data = data_to_plot, aes(x=qrs_rel_index, y=CVP, group = insp_rel_index)) +
+    geom_line(aes(color=insp_rel_index), size = 0.9) +
+    scale_color_gradientn(colours = turbo(10)) +
+    labs(title = "Change in CVP as a function of relative QRS index at selected relative respiration index times",
+         y = "CVP",
+         x = "Relative QRS index",
+         colour = lab.legend) +
+    theme(axis.title.y = element_text(margin = margin(t = 0, r = 15, b = 0, l = 0))) + 
+    facet_wrap(~ indicator)
+  return(viz)
 }
 
 
@@ -234,10 +258,7 @@ insp_shift_data <- function(data_set, shift_value_open, shift_value_closed){
 create_dygraphs <- function(closed, open){
   res1 <- dygraph_gam(closed, resid=TRUE)
   res1$x$group <- NULL
-  dy_graph <- list(
-  res1,
-  dygraph_gam(open, resid=TRUE)
-)
+  dy_graph <- list(res1, dygraph_gam(open, resid=TRUE))
   return(dy_graph)
 }
 
@@ -272,34 +293,27 @@ test <- move_contour(create_contour_patient(testo, testc),
 test <- test[order(test$indicator, test$qrs_rel_index, test$insp_rel_index),]
 test1 <- data.frame(qrs_rel_index = test$qrs_rel_index[1:10000],
                     insp_rel_index = test$insp_rel_index[1:10000],
-                    est = test$est[10001:20000] - test$est[1:10000]) # open minus closed est
+                    est = test$est[10001:20000] - test$est[1:10000],
+                    indicator = rep("Difference", 10000)) # open minus closed est
+test$indicator <- as.character(test$indicator)
+test3 <- bind_rows(test[,c(3,4,5,7)],test1)
 
-contourp <- create_contour_viz(move_contour(create_contour_patient(testo, testc),
-                                            center_open,
-                                            center_closed))
-
-create_contour_viz <- function(data_set,
-                               lab.title = "Effect of interaction term between respiration and QRS on CVP",
-                               lab.y = "Relative respiration index",
-                               lab.x = "Relative QRS index",
-                               lab.legend = "Estimated effect\non CVP",
-                               wrap = TRUE){
-  viz <- ggplot(data_set, aes(qrs_rel_index, insp_rel_index, z = est)) +
-    geom_raster(aes(fill = est)) +
-    geom_contour(colour = "black") +
-    scale_fill_gradientn(colours=c("#0000FFFF","#FFFFFFFF","#FF0000FF")) +
-      labs(title = lab.title,
-           y = lab.y,
-           x = lab.x,
-           fill = lab.legend) +
-    theme(axis.title.y = element_text(margin = margin(t = 0, r = 5, b = 0, l = 0)))
-  if(wrap){
-    viz <- viz + facet_wrap(~ indicator)}
-  return(viz)
+merge_contour_data_diff <- function(data_set){
+  data_set <- data_set[order(data_set$indicator, data_set$qrs_rel_index, data_set$insp_rel_index),]
+  data_set_diff <- data.frame(qrs_rel_index = test$qrs_rel_index[1:10000],
+                              insp_rel_index = test$insp_rel_index[1:10000],
+                              est = test$est[10001:20000] - test$est[1:10000],
+                              indicator = rep("Difference", 10000)) # open minus closed est
+  data_set$indicator <- as.character(data_set$indicator)
+  final <- bind_rows(data_set[,c(3,4,5,7),], data_set_diff)
+  final <- transform(final, indicator=factor(indicator, levels = c("closed_chest","open_chest","Difference")))
+  return(final)
 }
 
 
-create_contour_viz(test1, wrap = FALSE)
+
+
+create_contour_viz(merge_contour_data_diff(test))
 
 
 ```
@@ -317,7 +331,9 @@ table_values <- read_csv("../GAM_RDS/CV_MAE.csv")
 bic_values <- read_csv("../GAM_RDS/CV_BIC.csv") 
 mae_values <- read_csv("../GAM_RDS/CV_MAE_BIC.csv") 
 
-patient_list <- paste('pt', str_pad(seq(1,61), 2, pad = "0"), sep = "")
+patient_list <- paste('pt', str_pad(c(2, 3, 4, 5, 7, 9, 10, 11, 12, 14, 15, 16, 17, 18, 21, 22, 23, 24, 28, 31, 32, 
+                                      35, 37, 38, 41, 42, 44, 45, 46, 47, 48, 51, 52, 53, 54, 55, 57, 58), 
+                                    2, pad = "0"), sep = "")
 
 ui <- fluidPage(theme = shinytheme("sandstone"),
   navbarPage("GAM on heart-lung interaction during thoractomy", # Page header
@@ -328,9 +344,9 @@ ui <- fluidPage(theme = shinytheme("sandstone"),
         sidebarPanel(selectInput("patient", label = "Select patient", 
                                  choices = list(patient_list = patient_list),  selected = "pt02"),
                      sliderInput("center_closed", label = "Index placement of largest respiration effect during closed chest",
-                                 min = 1, max = 100, value = 50),
+                                 min = 1, max = 99, value = 50),
                      sliderInput("center_open", label = "Index placement of largest respiration effect during open chest",
-                                 min = 1, max = 100, value = 50),
+                                 min = 1, max = 99, value = 50),
                      tags$div(class="multicol", checkboxGroupInput("showhide", "Plots to show",
                                         choices = c("Regular plots" = "reg", "Closed/open difference plots" = "diff"),
                                         selected = c("reg"))),
@@ -380,7 +396,9 @@ server <- function(input, output) {
                                      open_add_sub_value(), 
                                      closed_add_sub_value())})
   snapplot <- reactive({create_viz(pred_both = preds())})
-
+  
+  # For snap diff plots
+  snapplot_diff <- reactive({diff_snap_plot(preds(), lab.legend = "Relative \nrespiration index                   ")})
 
   # For stacked plots
   stackedp <- reactive({stacked_plot(
@@ -407,35 +425,42 @@ server <- function(input, output) {
                                                         input$center_closed))})
   # For contour difference plots
   contourdiffp <- reactive({create_contour_viz(create_contour_diff_data(move_contour(create_contour_patient(
-                                                        data_open_contour(),
-                                                        data_closed_contour()),
-                                                    input$center_open,
-                                                    input$center_closed)),
-                                               lab.legend = "Interaction effect\nduring open chest \nminus interaction \neffect during     \nclosed chest",
-                                               wrap = TRUE)})
+            data_open_contour(),
+            data_closed_contour()),
+        input$center_open,
+        input$center_closed)),
+    lab.legend = "Interaction effect during   \nopen chest minus interaction \neffect during closed chest",
+    lab.title = "The difference in interaction effect (respiration and QRS) before and after thoractomy",
+    wrap = TRUE,
+    left_margin = 12)})
   
   
   
   # Rendering plots
   output$all_plots <- renderPlot({
-    
-    plotlist <- list(stackedp(), contourp(), snapplot(), stackeddiffp(), contourdiffp(), ggplot(data.frame()))
-    
-    toPlot <- rep(FALSE, 6)
-    plotmatrix <- matrix(nrow = 3, ncol = 0)
 
     if (length(input$showhide) == 0) {
       ggplot(data.frame())
     } else {
-      if (any("reg" == input$showhide)){
-        toPlot[1:3] <- TRUE
-        plotmatrix <- cbind(plotmatrix, rbind(c(1), c(2), c(3)))
+      if (length(input$showhide) == 2){
+        plotlist <- list(stackedp(), contourp(), snapplot(), stackeddiffp(), contourdiffp(), snapplot_diff())
+        plotmatrix <- rbind(c(1,1,1,4,4,4),
+                            c(2,2,2,5,5,5),
+                            c(3,3,3,6,6,6))
+      } else {
+        if ("reg" == input$showhide){
+          plotlist <- list(stackedp(), contourp(), snapplot())
+          plotmatrix <- rbind(c(1),
+                              c(2),
+                              c(3))
+        }
+        if ("diff" == input$showhide){
+          plotlist <- list(stackeddiffp(), contourdiffp(), snapplot_diff())
+          plotmatrix <- rbind(c(4),
+                              c(5),
+                              c(6))
+        }
       }
-      if (any("diff" == input$showhide)){
-        toPlot[4:6] <- TRUE
-        plotmatrix <- cbind(plotmatrix, rbind(c(4), c(5), c(6)))
-      }
-      plotlist <- plotlist[toPlot]
       grid.arrange(grobs = plotlist, layout_matrix = plotmatrix, nrow = 3)
     }
   }) # renderPlot ends here
